# perspective-correction

./: .gitignore  CMakeLists.txt  Controller.cpp  Controller.h  Homography.cpp  Homography.h  HorVanishPoint.cpp  HorVanishPoint.h  README.md  TextLocation.cpp  TextLocation.h  main.cpp  uiWindow.h  utility.h
include/: homography.h
src/: CMakeLists.txt  controller.cpp  horVanishPoint.cpp  main.cpp  textLocation.cpp  utility.cpp
